Getting started with Criteria

--- a/Criteria/RealUseCase.ipynb
+++ b/Criteria/RealUseCase.ipynb
@@ -228,6 +228,13 @@
     "else:\n",
     "    print(\"Результат не является статистически значимым: нет доказательств статистически значимых различий между выборками.\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Вернуться к оглавлению](../README.md)"
+   ]
   }
  ],
  "metadata": {
